--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.42.7",
     "aes-js": "^3.1.2",
@@ -33,7 +34,9 @@
     "react-i18next": "^14.1.1",
     "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
