--- a/app/package.json
+++ b/app/package.json
@@ -27,8 +27,10 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "i18next": "^23.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.1.1",
     "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
