--- a/app/package.json
+++ b/app/package.json
@@ -19,38 +19,38 @@
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.42.7",
     "aes-js": "^3.1.2",
-    "expo": "~50.0.14",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.1",
+    "expo-font": "~12.0.4",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-router": "~3.5.11",
+    "expo-secure-store": "~13.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "i18next": "^23.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.1",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6",
-    "expo-localization": "~14.8.4"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/aes-js": "^3.1.4",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
