--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
+    "react-native-bidirectional-infinite-scroll": "^0.3.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
